chart/templates/rest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest
  labels:
    run: rest
spec:
  selector:
    matchLabels:
      app: rest-api
  template:
    metadata:
      labels:
        app: rest-api
    spec:
      containers:
      - image: iaotle/rest-api:latest
        imagePullPolicy: IfNotPresent
        name: rest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu : 500m
          requests: 
            cpu : 200m 
      dnsPolicy: ClusterFirst
      restartPolicy: Always
status: {}
