chart/templates/frontendapp_service_lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontendapp-lb 
spec:
  selector:
    app: frontendapp           
  ports:
  - port: 443
    targetPort: 80
  type: LoadBalancer
