chart/templates/networkpolicyrest.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rest-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: rest-api
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 80
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: "ingress-nginx"
